Fix line tab CSS to get rid of gap

--- a/app/javascript/packs/goodserviceApp/assets/stylesheets/app.scss
+++ b/app/javascript/packs/goodserviceApp/assets/stylesheets/app.scss
@@ -13,6 +13,10 @@
   }
 }
 
+.ui.fluid.tabular.menu {
+  margin-bottom: 0;
+}
+
 .ui.segment.tab {
   background: none;
 }
